# gtk_scrot_gui

./: CMakeLists.txt
